[tool.poetry]
name = "pytest-html-sample"
version = "0.1.0"
description = ""
authors = ["tamaosa"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.5"
pytest-html = "^3.1.1"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
flake8 = "^3.9.2"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
